# ssh_proxy

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  ssh_manager.py  test.py  unifi_device.py
app/core/: config.py  logging.py
app/schemas/: __init__.py  proxy.py
app/services/: __init__.py  dependencies.py  ssh_manager.py  test.py  unifi_device.py
app/views/: __init__.py  proxy.py
