[project]
name = "ssh-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Bondarenko",email = "bondarenko200021@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "asyncssh (>=2.24.0,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "fastapi[standard] (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.50.2,<0.51.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
